tests/semantic/invalid/03_undeclared_func.src
fn main() -> int {
    return unknown_func();
}
